cmake: Make library optional
To include the library one has to set the optional flag to ON, by running:
$cmake -S <source path> -B <build folder path> -D<flag name>=[ON|OFF]

ex: to include the MathFunctions library it was defined a option flag
USE_MY_MATH. Thus from the build directory of the project one can include
the library by running
$cmake -S ../ -B . -DUSE_MY_MATH=ON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,15 +15,22 @@ configure_file(MainConfig.h.in MainConfig.h)
 # creates the output with the given project name
 add_executable(${PROJECT_NAME} main.cpp)
 
-# add the MathFunctions library to get built
-add_subdirectory(MathFunctions)
+# use optional library
+option(USE_MY_MATH "Use mathFunctions implementation" ON)
+if(USE_MY_MATH)
+    # add the MathFunctions library to get built
+    add_subdirectory(MathFunctions)
+    list(APPEND EXTRA_LIBS MathFunctions)
+    list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
+endif()
 
 #link the target library to the executable
-target_link_libraries(MyMain PUBLIC MathFunctions)
+target_link_libraries(MyMain PUBLIC ${EXTRA_LIBS})
 
 # add the binary tree to the search path for include files
 # so that we will find TutorialConfig.h
 target_include_directories(MyMain PUBLIC
                            "${PROJECT_BINARY_DIR}"
-                           "${PROJECT_SOURCE_DIR}/MathFunctions"
+                           ${EXTRA_INCLUDES}
                            )
+
