cmake: Adding usage requirement for a library - CMake modern approach

--- a/MathFunctions/CMakeLists.txt
+++ b/MathFunctions/CMakeLists.txt
@@ -1,2 +1,4 @@
 # Create a library target
 add_library(MathFunctions MathFunctions.cpp)
+
+target_include_directories(MathFunctions INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
